--- a/AwsChat/Base.lproj/Main.storyboard
+++ b/AwsChat/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="uxg-xX-TlC">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="AwsChat" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,132 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wFi-de-mCK">
+                                <rect key="frame" x="236" y="136" width="128" height="128"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wlq-ut-pfV" customClass="FBSDKProfilePictureView">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="wlq-ut-pfV" secondAttribute="trailing" id="00d-HM-MeP"/>
+                                    <constraint firstAttribute="bottom" secondItem="wlq-ut-pfV" secondAttribute="bottom" id="2gz-k2-2PM"/>
+                                    <constraint firstItem="wlq-ut-pfV" firstAttribute="leading" secondItem="wFi-de-mCK" secondAttribute="leading" id="MDl-RF-xKQ"/>
+                                    <constraint firstAttribute="height" constant="128" id="UxE-Q7-lSL"/>
+                                    <constraint firstItem="wlq-ut-pfV" firstAttribute="top" secondItem="wFi-de-mCK" secondAttribute="top" id="aKM-ZO-Fnr"/>
+                                    <constraint firstAttribute="width" constant="128" id="jWz-LA-5Il"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bga-cE-Kry">
+                                <rect key="frame" x="283" y="381" width="34" height="30"/>
+                                <state key="normal" title="Start"/>
+                                <connections>
+                                    <action selector="onStartButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zZh-VQ-VSU"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wFi-de-mCK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3fG-xd-r1c"/>
+                            <constraint firstItem="Bga-cE-Kry" firstAttribute="top" secondItem="wFi-de-mCK" secondAttribute="bottom" constant="117" id="Dz5-nz-FgY"/>
+                            <constraint firstItem="Bga-cE-Kry" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NoR-1i-BKk"/>
+                            <constraint firstItem="wFi-de-mCK" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-100" id="uG9-cH-9YB"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Login" id="aMC-0G-1Qj"/>
+                    <connections>
+                        <outlet property="iconContainer" destination="wFi-de-mCK" id="rCA-TS-FPl"/>
+                        <outlet property="startButton" destination="Bga-cE-Kry" id="Yz9-sr-71J"/>
+                        <segue destination="Bph-iZ-cEK" kind="show" identifier="ChatRooms" id="sDy-g4-YLF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="331" y="379"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="cdr-jk-cmg">
+            <objects>
+                <navigationController id="uxg-xX-TlC" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Qq9-gv-lpD">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Uij-1X-m3Z"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1H8-nG-dRE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-409" y="379"/>
+        </scene>
+        <!--Chat Rooms-->
+        <scene sceneID="tno-g3-64M">
+            <objects>
+                <tableViewController id="Bph-iZ-cEK" customClass="ChatRoomsViewController" customModule="AwsChat" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="A0T-6m-cFK">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RoomCell" textLabel="V4V-YY-5qi" style="IBUITableViewCellStyleDefault" id="pSc-23-Fvw">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pSc-23-Fvw" id="ofg-9M-4U8">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="V4V-YY-5qi">
+                                            <rect key="frame" x="15" y="0.0" width="570" height="43"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="OoM-Da-xlZ" kind="show" identifier="EnterRoom" id="ss6-26-SUD"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Bph-iZ-cEK" id="mU5-A7-xnE"/>
+                            <outlet property="delegate" destination="Bph-iZ-cEK" id="zst-I8-rqI"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Chat Rooms" id="fW6-ob-xH2">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="bF0-Ue-1Sr">
+                            <connections>
+                                <action selector="onNewRoomButtonTapped:" destination="Bph-iZ-cEK" id="5mG-qX-SUs"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="enc-gi-VaW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1060" y="379"/>
+        </scene>
+        <!--Chat View Controller-->
+        <scene sceneID="9oj-k8-Gnj">
+            <objects>
+                <viewController id="OoM-Da-xlZ" customClass="ChatViewController" customModule="AwsChat" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Yvf-y3-D11"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ysr-EE-HN6"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="iXL-pB-EtY">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VUX-vT-lBv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1796" y="379"/>
         </scene>
     </scenes>
 </document>
